fixed installation with vs

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -351,9 +351,9 @@ install(TARGETS ${INSTALL_LIBS}
    ARCHIVE DESTINATION lib
 )
 install(FILES 
-   ${CMAKE_CURRENT_BINARY_DIR}/modules/turbulence.mod
-   ${CMAKE_CURRENT_BINARY_DIR}/modules/time.mod
-   ${CMAKE_CURRENT_BINARY_DIR}/modules/util.mod
+   ${CMAKE_CURRENT_BINARY_DIR}/modules/\${BUILD_TYPE}/turbulence.mod
+   ${CMAKE_CURRENT_BINARY_DIR}/modules/\${BUILD_TYPE}/time.mod
+   ${CMAKE_CURRENT_BINARY_DIR}/modules/\${BUILD_TYPE}/util.mod
    DESTINATION include
 )
 #KBinstall(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/modules/\${BUILD_TYPE}/ DESTINATION include)
