support installation of gotm exports

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -92,7 +92,7 @@ if(GOTM_EMBED_VERSION)
    add_dependencies(util version)
 endif(GOTM_EMBED_VERSION)
 target_link_libraries(util PRIVATE field_manager)
-target_include_directories(util PUBLIC "${CMAKE_CURRENT_BINARY_DIR}/modules")
+target_include_directories(util PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/modules> $<INSTALL_INTERFACE:include>)
 
 add_library(turbulence
    turbulence/algebraiclength.F90
@@ -156,14 +156,14 @@ add_library(turbulence
    turbulence/variances.F90
 )
 target_link_libraries(turbulence PRIVATE util)
-target_include_directories(turbulence PUBLIC "${CMAKE_CURRENT_BINARY_DIR}/modules")
+target_include_directories(turbulence PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/modules> $<INSTALL_INTERFACE:include>)
 
 if(GOTM_USE_FABM)
    add_library(gotm_fabm
       fabm/gotm_fabm.F90
    )
    target_link_libraries(gotm_fabm PUBLIC fabm PRIVATE util field_manager)
-   target_include_directories(gotm_fabm PUBLIC "${CMAKE_CURRENT_BINARY_DIR}/modules")
+   target_include_directories(gotm_fabm PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/modules> $<INSTALL_INTERFACE:include>)
    set_property(TARGET gotm_fabm PROPERTY FOLDER gotm)
 endif(GOTM_USE_FABM)
 
@@ -179,7 +179,7 @@ add_library(input
    input/input_netcdf.F90
 )
 target_link_libraries(input PRIVATE util output_manager)
-target_include_directories(input PUBLIC "${CMAKE_CURRENT_BINARY_DIR}/modules")
+target_include_directories(input PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/modules> $<INSTALL_INTERFACE:include>)
 
 add_library(airsea
    airsea/airsea.F90
@@ -195,7 +195,7 @@ add_library(airsea
 )
 target_compile_definitions(airsea PRIVATE GUSTINESS)
 target_link_libraries(airsea PRIVATE util input)
-target_include_directories(airsea PUBLIC "${CMAKE_CURRENT_BINARY_DIR}/modules")
+target_include_directories(airsea PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/modules> $<INSTALL_INTERFACE:include>)
 
 add_library(observations
    observations/analytical_profile.F90
@@ -204,7 +204,7 @@ add_library(observations
    observations/observations.F90
 )
 target_link_libraries(observations PRIVATE util input)
-target_include_directories(observations PUBLIC "${CMAKE_CURRENT_BINARY_DIR}/modules")
+target_include_directories(observations PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/modules> $<INSTALL_INTERFACE:include>)
 
 add_library(meanflow
    meanflow/buoyancy.F90
@@ -224,14 +224,14 @@ add_library(meanflow
    meanflow/wequation.F90
 )
 target_link_libraries(meanflow PRIVATE observations airsea)
-target_include_directories(meanflow PUBLIC "${CMAKE_CURRENT_BINARY_DIR}/modules")
+target_include_directories(meanflow PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/modules> $<INSTALL_INTERFACE:include>)
 
 if(GOTM_USE_SEAGRASS)
    add_library(seagrass
       extras/seagrass/seagrass.F90
    )
    target_link_libraries(seagrass PRIVATE meanflow field_manager)
-   target_include_directories(seagrass PUBLIC "${CMAKE_CURRENT_BINARY_DIR}/modules")
+   target_include_directories(seagrass PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/modules> $<INSTALL_INTERFACE:include>)
    set_property(TARGET seagrass PROPERTY FOLDER gotm)
 endif()
 
@@ -240,7 +240,7 @@ if(GOTM_USE_FABM)
                fabm/gotm_fabm_input.F90
    )
    target_link_libraries(gotm_fabm_io PRIVATE input gotm_fabm fabm)
-   target_include_directories(gotm_fabm_io PUBLIC "${CMAKE_CURRENT_BINARY_DIR}/modules")
+   target_include_directories(gotm_fabm_io PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/modules> $<INSTALL_INTERFACE:include>)
    set_property(TARGET gotm_fabm_io PROPERTY FOLDER gotm)
 endif(GOTM_USE_FABM)
 
@@ -258,7 +258,7 @@ endif()
 if(GOTM_USE_SEAGRASS)
    target_link_libraries(gotm PUBLIC seagrass)
 endif()
-target_include_directories(gotm PUBLIC "${CMAKE_CURRENT_BINARY_DIR}/modules")
+target_include_directories(gotm PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/modules> $<INSTALL_INTERFACE:include>)
 
 set_property(TARGET gotm input airsea observations meanflow PROPERTY FOLDER gotm)
 
