--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,4 +20,7 @@ add_executable(test_time EXCLUDE_FROM_ALL
               )
 target_link_libraries(test_time PRIVATE util)
 
-set_property(TARGET test_airsea test_albedo test_eqstate test_time PROPERTY FOLDER tests)
+add_custom_target(gotm_tests)
+add_dependencies(gotm_tests test_airsea test_albedo test_eqstate test_time)
+
+set_property(TARGET gotm_tests test_airsea test_albedo test_eqstate test_time PROPERTY FOLDER tests)
